Improve the responsiveness of the favorite button

https://bugzilla.gnome.org/show_bug.cgi?id=757015