src/photos-base-item.c
@@ -404,7 +404,11 @@ photos_base_item_create_thumbnail_finish (PhotosBaseItem *self, GAsyncResult *re
 static void
 photos_base_item_default_set_favorite (PhotosBaseItem *self, gboolean favorite)
 {
-  photos_utils_set_favorite (self->priv->id, favorite);
+  PhotosBaseItemPrivate *priv = self->priv;
+
+  priv->favorite = favorite;
+  photos_base_item_check_effects_and_update_info (self);
+  photos_utils_set_favorite (priv->id, favorite);
 }
 
 
